// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/GuideMessage Left 1`] = `
<div
  className="css-1qr63or-GuideMessageWrapper ewha4wa0"
  direction="left"
>
  <div
    className="css-zh1rva-AnimatorGuideImg e9zrumb0"
  />
  <div
    className="css-16p81sx-MessageWrapper e6z3dsf0"
    direction="left"
    style={
      Object {
        "marginTop": "15px",
      }
    }
  >
    Left Direction
  </div>
</div>
`;

exports[`Storyshots Molecules/GuideMessage Right 1`] = `
<div
  className="css-v95ugg-GuideMessageWrapper ewha4wa0"
  direction="right"
>
  <div
    className="css-u6s7mk-AnimatorGuideImg e9zrumb0"
  />
  <div
    className="css-j0rdok-MessageWrapper e6z3dsf0"
    direction="right"
    style={
      Object {
        "marginTop": "15px",
      }
    }
  >
    Right Direction
  </div>
</div>
`;
